# ChangeLog for dev-util/glade
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.71 2007/06/01 16:51:06 nixnut Exp $

  01 Jun 2007; nixnut <nixnut@gentoo.org> glade-3.2.0.ebuild:
  Stable on ppc wrt bug 180132

  31 May 2007; Daniel Gryniewicz <dang@gentoo.org> glade-3.2.0.ebuild:
  Marked stable on amd64 for bug #180132

  30 May 2007; Raúl Porcel <armin76@gentoo.org> glade-3.2.0.ebuild,
  glade-3.2.2.ebuild:
  alpha stable and add ~ia64 wrt #180132

  29 May 2007; Andrej Kacian <ticho@gentoo.org> glade-3.2.0.ebuild:
  Stable on x86, bug #180132.

  29 May 2007; Brent Baude <ranger@gentoo.org> glade-3.2.0.ebuild:
  Marking glade-3.2.0 ppc64 stable for bug 180132

  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> glade-3.2.0.ebuild:
  Stable on sparc wrt #180132

*glade-3.2.2 (28 May 2007)

  28 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> +glade-3.2.2.ebuild:
  Version bump from upstream with fixes

*glade-3.2.1 (03 May 2007)

  03 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> +glade-3.2.1.ebuild:
  Version bump for bug fixes

  22 Mar 2007; <compnerd@gentoo.org> -glade-3.1.4.ebuild:
  prune older release

*glade-3.2.0 (22 Mar 2007)

  22 Mar 2007; <compnerd@gentoo.org> +glade-3.2.0.ebuild:
  Version bump for 2.18 cycle

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> glade-2.12.1.ebuild:
  x86 stable

  03 Mar 2007; Luis Medinas <metalgod@gentoo.org> glade-2.12.1.ebuild:
  Stable on amd64.

*glade-3.1.5 (14 Feb 2007)

  14 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org> +glade-3.1.5.ebuild:
  New version from upstream with numerous bug fixes, mask python on alpha for
  now

  20 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -glade-2.10.1.ebuild, -glade-3.1.2.ebuild:
  prune old versions

*glade-3.1.4 (20 Jan 2007)

  20 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org> +glade-3.1.4.ebuild:
  Version bump to fix a few issues
