@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/Attic/glade-2.6.8.ebuild,v 1.10 2005/08/23 16:48:58 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/Attic/glade-2.6.8.ebuild,v 1.11 2007/06/24 09:15:27 eva Exp $
 
 inherit eutils gnome2
 
@@ -17,8 +17,8 @@ RDEPEND=">=x11-libs/gtk+-2.4
 	gnome? ( >=gnome-base/libgnomeui-2.6.0
 		>=gnome-base/libgnomecanvas-2.0.0
 		>=gnome-base/libbonoboui-2.0.0 )
-	gnomedb? ( >=gnome-extra/libgnomedb-0.90.3
-			>=gnome-extra/libgda-0.90.0 )"
+	gnomedb? ( =gnome-extra/libgnomedb-1*
+			=gnome-extra/libgda-1* )"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
 	sys-devel/gettext
